// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileInfoActions should render correctly for empty state 1`] = `
<MyProfileTile
  birthdaySaving={false}
  ctaLink="accountOverviewMobile"
  ctaTitle=""
  handleComponentChange={[Function]}
  title=""
>
  <Styled(View)>
    <Styled(View)>
      <Styled(Styled(BodyCopy))
        accessibilityText=""
        dataLocator=""
        fontSize="fs16"
        fontWeight="semibold"
        margin={null}
        numberOfLines={null}
        spacingStyles="margin-bottom-MED"
        text="lbl_profile_Enhance_Experience"
        textDecoration={null}
      />
      <Styled(BodyCopy)
        accessibilityText=""
        dataLocator=""
        fontSize="fs16"
        margin={null}
        numberOfLines={null}
        text="lbl_profile_profileInCompleteMessage"
        textDecoration={null}
      />
    </Styled(View)>
  </Styled(View)>
  <Styled(View)>
    <ProfileInfoActionTile
      activityCompletionState=""
      activityDescription="lbl_profile_mailingAddressDescription"
      activityIcon={
        Object {
          "testUri": "../../../../core/src/assets/mailingAddress.png",
        }
      }
      activityId="mailingAddress"
      activityTitle="lbl_profile_activityPercentage"
      handleComponentChange={[Function]}
    />
    <ProfileInfoActionTile
      activityCompletionState=""
      activityDescription="lbl_profile_favStoreDescription"
      activityIcon={
        Object {
          "testUri": "../../../../core/src/assets/store.png",
        }
      }
      activityId="favStore"
      activityTitle="lbl_profile_activityPercentage"
      handleComponentChange={[Function]}
    />
    <ProfileInfoActionTile
      activityCompletionState=""
      activityDescription="lbl_profile_userBirthdayDescription"
      activityIcon={
        Object {
          "testUri": "../../../../core/src/assets/birthday.png",
        }
      }
      activityId="userBirthday"
      activityTitle="lbl_profile_activityPercentage"
      handleComponentChange={[Function]}
    />
    <ProfileInfoActionTile
      activityCompletionState=""
      activityDescription="lbl_profile_aboutYourselfDescription"
      activityIcon={
        Object {
          "testUri": "../../../../core/src/assets/survey.png",
        }
      }
      activityId="aboutYourself"
      activityTitle="lbl_profile_activityPercentage"
      handleComponentChange={[Function]}
    />
  </Styled(View)>
  <AboutYouSurveyModal
    labels={Object {}}
    openState={false}
    toggleModalState={[Function]}
    userSurvey={Immutable.List []}
  />
</MyProfileTile>
`;

exports[`ProfileInfoActions should render correctly for filled state 1`] = `
<MyProfileTile
  birthdaySaving={false}
  ctaLink="accountOverviewMobile"
  ctaTitle=""
  handleComponentChange={[Function]}
  title=""
>
  <Styled(View)>
    <Styled(View)>
      <Styled(Styled(BodyCopy))
        accessibilityText=""
        dataLocator=""
        fontSize="fs16"
        fontWeight="semibold"
        margin={null}
        numberOfLines={null}
        spacingStyles="margin-bottom-MED"
        text="lbl_profile_Enhance_Experience"
        textDecoration={null}
      />
      <Styled(BodyCopy)
        accessibilityText=""
        dataLocator=""
        fontSize="fs16"
        margin={null}
        numberOfLines={null}
        text="lbl_profile_profileCompletionExclamation"
        textDecoration={null}
      />
      <Styled(BodyCopy)
        accessibilityText=""
        dataLocator=""
        fontSize="fs16"
        margin={null}
        numberOfLines={null}
        text="lbl_profile_profileCompletionMessage"
        textDecoration={null}
      />
      <Styled(BodyCopy)
        accessibilityText=""
        dataLocator=""
        fontSize="fs16"
        margin={null}
        numberOfLines={null}
        text="lbl_profile_getMorePoints"
        textDecoration={null}
      />
    </Styled(View)>
    <Styled(View)>
      <ProfileProgress
        bgColor="#fff"
        borderWidth={10}
        color="#1ba5e0"
        profileCompletion="100"
        radius={50}
        shadowColor="#000"
      />
    </Styled(View)>
  </Styled(View)>
  <Styled(View)>
    <ProfileInfoActionTile
      activityCompletionState="lbl_profile_profileActivityCompleted"
      activityDescription="lbl_profile_mailingAddressDescription"
      activityIcon={
        Object {
          "testUri": "../../../../core/src/assets/mailingAddress.png",
        }
      }
      activityId="mailingAddress"
      activityTitle="lbl_profile_activityPercentage"
      handleComponentChange={[Function]}
    />
    <ProfileInfoActionTile
      activityCompletionState="lbl_profile_profileActivityCompleted"
      activityDescription="lbl_profile_favStoreDescription"
      activityIcon={
        Object {
          "testUri": "../../../../core/src/assets/store.png",
        }
      }
      activityId="favStore"
      activityTitle="lbl_profile_activityPercentage"
      handleComponentChange={[Function]}
    />
    <ProfileInfoActionTile
      activityCompletionState="lbl_profile_profileActivityCompleted"
      activityDescription="lbl_profile_userBirthdayDescription"
      activityIcon={
        Object {
          "testUri": "../../../../core/src/assets/birthday.png",
        }
      }
      activityId="userBirthday"
      activityTitle="lbl_profile_activityPercentage"
      handleComponentChange={[Function]}
    />
    <ProfileInfoActionTile
      activityCompletionState="lbl_profile_profileActivityCompleted"
      activityDescription="lbl_profile_aboutYourselfDescription"
      activityIcon={
        Object {
          "testUri": "../../../../core/src/assets/survey.png",
        }
      }
      activityId="aboutYourself"
      activityTitle="lbl_profile_activityPercentage"
      handleComponentChange={[Function]}
    />
  </Styled(View)>
  <AboutYouSurveyModal
    labels={Object {}}
    openState={false}
    toggleModalState={[Function]}
    userSurvey={
      Immutable.List [
        Immutable.List [
          "test",
        ],
        Immutable.List [
          "test",
        ],
      ]
    }
  />
</MyProfileTile>
`;
